--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
             <button class="btn-ataque" id="Fuego">Fuego</button>
             <button class="btn-ataque" id="Agua">Agua</button>
         </div>
-
+        <section id="resultados">
+            <div id="AtaquesPlayer"></div>
+            <div id="Resultado"></div>
+            <div id="AtaquesEnemy"></div>
+        </section>
         <section id="jugar">
             <p id="resultadoFinal"></p>
             <button id="jugardenuevo">Play again</button>
         </section>
-
         <div id="Stats">
             <div id="StatsEnemy">
                 <h2><span id="nomMascotaEn">mascota</span> enemiga</h2>
@@ -46,8 +49,7 @@
             </div>
         </div>
     </section>    
-    <section id="resultados">
-    </section>
+
 </body>
 <!--
 <script src="JS/mokepon.js"></script>
