--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepon</title>
     <link rel="stylesheet" href="Styles/styles.css">
-    <script src="JS/mokepon.js"></script>
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/1752/1752681.png" type="image/x-icon">
 </head>
 <body>
     <h1>Mokepon</h1>
     <section id="selectMascota">
         <h2>Selecciona una mascota</h2>
-        <div class="mascotas">
-            <div><input name="mascota" type="radio" value="Hipodoge" id="Hipodoge"/><label for="Hipodoge"> Hipodoge <img src="Styles/Assets/mokepons_mokepon_Hipodoge_attack.webp" alt="Hipodoge"></label></div>
-            <div><input name="mascota" type="radio" value="Capipepo" id="Capipepo"/><label for="Capipepo"> Capipepo <img src="Styles/Assets/mokepons_mokepon_Capipepo_attack.webp" alt="Capipepo"></label></div>
-            <div><input name="mascota" type="radio" value="Ratigueya" id="Ratigueya"/><label for="Ratigueya"> Ratigueya <img src="Styles/Assets/mokepons_mokepon_Ratigueya_attack.webp" alt="Ratigueya"></label></div>
+        <div class="mascotas" id="mascotasseleccionables">
         </div>
         <div class="containerboton"><button id="btnselect">Seleccionar</button></div>
     </section>
@@ -38,7 +34,7 @@
         </section>
         <div id="Stats">
             <div id="StatsEnemy">
-                <h2><span id="nomMascotaEn">mascota</span> enemiga</h2>
+                <h2><span id="nomMascotaEn">mascota</span> enemigo</h2>
                 <p id="vidasEnemigo"></p>
                 <img alt="Mascota enemiga" id="imgMascotaEn">
             </div>
@@ -49,12 +45,6 @@
             </div>
         </div>
     </section>    
-
+    <script src="JS/mokepon.js" type="module"></script>
 </body>
-<!--
-<script src="JS/mokepon.js"></script>
--->
-<!--
-    <script src="JS/codigo.js"></script>
--->
 </html>
