Añadiendo canvas y movimiento en canvas

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         </div>
         <div class="containerboton"><button id="btnselect">Seleccionar</button></div>
     </section>
+    <section id="verMapa">
+        <h2 id="TituloMapa">Recorre el mapa con tu mokepon</h2>
+        <canvas id="mapa" width="900px" height="600px">
+        </canvas>
+        <button id="arriba" class="btnsmv"> Arriba</button>
+        <div>
+            <button id="izquierda" class="btnsmv"> Izquierda</button>
+            <button id="abajo" class="btnsmv"> Abajo</button>
+            <button id="derecha" class="btnsmv"> Derecha</button>
+        </div>
+    </section>
     <section id="selectAtaque">
         <div id="ataques">
             <h2>Elige tu ataque</h2>
