--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </section>
     <section id="verMapa">
         <h2 id="TituloMapa">Recorre el mapa con tu mokepon</h2>
+        <h4>(Pulsa enter para iniciar una batalla)</h4>
         <canvas id="mapa" width="900px" height="600px">
         </canvas>
         <button id="arriba" class="btnsmv"> Arriba</button>
