Añadiendo dinamismo en el mapa

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <button id="abajo" class="btnsmv"> Abajo</button>
             <button id="derecha" class="btnsmv"> Derecha</button>
         </div>
+        <button id="combate" class="combate"> Combate</button>
     </section>
     <section id="selectAtaque">
         <div id="ataques">
